--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My Website
+title: Rafael Wielewski
 
 # Your name to show in the footer
-author: Some Person
+author: Rafael Wielewski
 
 ###############################################
 # --- List of links in the navigation bar --- #
